moderate .html, .css

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,31 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Yeva</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <section class="about-details section-padding">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-6" data-aos="fade-right">
+						<div class="single_about_details">
+							<h3>I'm Yeva</h3>
+							<span></span>
+							<p class="mb20">A Dog Mom, Business Analyst and Ceramist</p>
+							<p>Tech stack: Python, C++, JavaScript, HTML, CSS, SQL, Swift, +
+<br> Soft skills: Leadirship, Creativity, Empathy
+<br> Fun Fact: my eyes are the colors of the flag of Kazakhstan </p>
+						</div>
+					</div><!-- END COL-->
+					<div class="col-md-5 col-md-offset-1 col-xs-12">
+						<div class="single_about_details_img">
+							<img class="img-responsive" src="http://ekramit.net/tf/kaniz/assets/img/desktop2.png" alt="">
+						</div>
+					</div><!-- END COL-->
+				</div><!-- END ROW-->
+			</div><!-- END CONTAINER-->
+		</section>
+    </body>
+    </html>
